force-app/bedrock/lib/thread-service/objects/Thread__c/Thread__c.object-meta.xml
<CustomObject>
    <label>Thread</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Thread #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Threads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>