force-app/bedrock/lib/thread-service/objects/Thread__c/fields/Heartbeat__c.field-meta.xml
<CustomField>
    <fullName>Heartbeat__c</fullName>
    <label>Heartbeat</label>
    <type>DateTime</type>
</CustomField>