force-app/bedrock/lib/thread-service/objects/Thread__c/fields/Lane_Key__c.field-meta.xml
<CustomField>
    <fullName>Lane_Key__c</fullName>
    <externalId>true</externalId>
    <label>Lane Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>