force-app/bedrock/lib/thread-service/objects/Thread__c/fields/Pause_Reason__c.field-meta.xml
<CustomField>
    <fullName>Pause_Reason__c</fullName>
    <label>Pause Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>