force-app/bedrock/lib/thread-service/objects/Thread__c/fields/Pool__c.field-meta.xml
<CustomField>
    <fullName>Pool__c</fullName>
    <label>Pool</label>
    <length>80</length>
    <type>Text</type>
</CustomField>