force-app/bedrock/lib/thread-service/objects/Thread__c/fields/Run_Key__c.field-meta.xml
<CustomField>
    <fullName>Run_Key__c</fullName>
    <label>Run Key</label>
    <length>64</length>
    <type>Text</type>
</CustomField>