force-app/bedrock/lib/thread-service/objects/Thread__c/fields/Started__c.field-meta.xml
<CustomField>
    <fullName>Started__c</fullName>
    <label>Started</label>
    <type>DateTime</type>
</CustomField>